--- a/send.ipynb
+++ b/send.ipynb
@@ -22,12 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "\n",
     "def prepare_dataframe(csv):\n",
     "    df = pd.read_csv(csv)\n",
     "    df[\"embedded\"] = df[\"embedded\"].map(lambda x: eval(x))\n",
@@ -36,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataframeの設定\n",
-    "df = prepare_dataframe(\"new_new_embedded_all.csv\")"
+    "df = prepare_dataframe(\"embedded_all.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ESTIMATE Agent[02] WEREWOLF nan\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for protocol in protocol_list:\n",
+    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
+    "print(comment1.flag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -150,33 +168,19 @@
     }
    ],
    "source": [
-    "for protocol in protocol_list:\n",
-    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
-    "print(comment1.flag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NOT SUSPECT Agent[00] nan nan\n",
-      "VOTE Agent[00] nan nan\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
     "comment2 = Comment(\"Agent[00]の言っていることは信じられない。今夜はAgent[00]に投票するよ。\", \"Agent[01]\") \n",
     "protocol_list = comment1.remark_to_protocol()\n",
     "for protocol in protocol_list:\n",
     "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
-    "print(comment1.flag)"
+    "print(comment2.flag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
